removed doublons